--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -1,2 +1,22 @@
-<h1>Thank You!</h1>
-<p>Your message has been received.</p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css" />
+   <script src="app.js"></script>
+    <title>Home</title>
+</head>
+<body>
+    <%- include('../partials/header') %>
+
+<main>
+    <h1>Thank You!</h1>
+    <p>Your message has been received.</p>
+    <p>Grow together, thrive together!</p>
+</main>
+
+    <%- include('../partials/footer') %>
+</body>
+</html>
