--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,1 +1,22 @@
-<h1>About Us</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css" />
+   <script src="app.js"></script>
+    <title>Home</title>
+</head>
+<body>
+    <%- include('../partials/header') %>
+
+<main>
+    <h1>About US</h1>
+    <h2>What we do</h2>
+    <p>Grow together, thrive together!</p>
+</main>
+
+<%- include('../partials/footer') %>
+</body>
+</html>
+
