--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,7 +1,27 @@
-<h1>Contact Us</h1>
-<form method="POST" action="/contact">
-  <input type="text" name="name" placeholder="Your Name" required /><br />
-  <input type="email" name="email" placeholder="Your Email" required /><br />
-  <textarea name="message" placeholder="Your Message" required></textarea><br />
-  <button type="submit">Send</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css" />
+   <script src="app.js"></script>
+    <title>Home</title>
+</head>
+<body>
+    <%- include('../partials/header') %>
+
+<main>
+  <h1>Contact Us</h1>
+  <form method="POST" action="/contact">
+    <input type="text" name="name" placeholder="Your Name" required /><br />
+    <input type="email" name="email" placeholder="Your Email" required /><br />
+    <textarea name="message" placeholder="Your Message" required></textarea><br />
+    <button type="submit">Send</button>
+  </form>
+</main>
+
+<%- include('../partials/footer') %>
+</body>
+</html>
+
+
