--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -3,11 +3,19 @@
   <head>
     <title>Community Portal</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <script src="app.js"></script>
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a> | <a href="/about">About</a> |
-      <a href="/events">Events</a> | <a href="/contact">Contact</a>
-    </nav>
+    
+    <nav class="navbar">
+      <img src="/assets/Logo.png" alt="Garden Logo" class="logo">
+      <ul class="nav-links">
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/events">Events</a></li>
+          <li><a href="/contact">Contact</a></li>
+          <li><a href="/thankyou">Thank You</a></li>
+      </ul>
+  </nav>
   </body>
 </html>
