Home page - unfinished

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <div class="gardenHeader">
-    <img src="../images/GardeningFooterSnip.jpg" alt="Garden picture" class="gardenPicture">
+    <!-- <img src="../images/GardeningFooterSnip.jpg" alt="Garden picture" class="gardenPicture"> -->
   </div>
 <footer>
     
