--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
-<div class="space-barHeader">
+<!-- <div class="space-barHeader">
 
-</div>
+</div> -->
 
 <nav class="navbar">
     <div class="icon-div">
@@ -10,7 +10,7 @@
             <h3>We thrive together</h3>
         </div>
     </div>
-   
+
     <ul class="nav-links">
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li>
@@ -20,6 +20,6 @@
     </ul>
   </nav>
 
-  <div class="gardenHeader">
-    <img src="../images/GardeningHeaderSnip.jpg" alt="Garden picture" class="gardenPicture">
+     <div class="gardenHeader">
+    <img src="../images/GardeningFooterSnip.jpg" alt="Garden picture" class="gardenPicture">
   </div>
