--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
-    background-color: #f0fff0;
+    /* background-color: #f0fff0; */
 }
 
 main{
@@ -25,6 +25,7 @@ h1{
     align-items: center;
     padding: 20px 20px;
     justify-content: space-between;
+    /* opacity: .7; */
 }
 
 /* Make logo circular */
