fixed footer by adding boostrap link

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -25,7 +25,7 @@
           growing and sharing gardening wisdom.
         </h1>
         <div>
-          <button>Join the Team</button>
+          <button><a href="/contact">Join the Team</a></button>
         </div>
       </div>
       <div class="welcome-img">
