--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="/css/style.css" />
    <script src="app.js"></script>
     <title>Home</title>
+     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
 </head>
 <body>
     <%- include('../partials/header') %>
