--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-   <script src="app.js"></script>
+    <script src="app.js"></script>
     <title>Home</title>
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <%- include('../partials/header') %>
 
-<main>
-  <h1>Contact Us</h1>
-  <form method="POST" action="/contact">
-    <input type="text" name="name" placeholder="Your Name" required /><br />
-    <input type="email" name="email" placeholder="Your Email" required /><br />
-    <textarea name="message" placeholder="Your Message" required></textarea><br />
-    <button type="submit">Send</button>
-  </form>
-</main>
+    <main>
+      <h1>Contact Us</h1>
+      <form method="POST" action="/contact">
+        <input type="text" name="name" placeholder="Your Name" required /><br />
+        <input
+          type="email"
+          name="email"
+          placeholder="Your Email"
+          required
+        /><br />
+        <textarea name="message" placeholder="Your Message" required></textarea
+        ><br />
+        <button type="submit">Send</button>
+      </form>
+    </main>
 
-<%- include('../partials/footer') %>
-<script src="appFrontEnd.js"></script>
-</body>
+    <%- include('../partials/footer') %>
+    <script src="appFrontEnd.js"></script>
+  </body>
 </html>
-
-
