--- a/views/pages/events.ejs
+++ b/views/pages/events.ejs
@@ -1,120 +1,158 @@
-
-
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
     <title>Events</title>
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <%- include('../partials/header') %>
-<header>
-    <h1 >Our Events!</h1>
-</header>
+    <header>
+      <h1>Our Events!</h1>
+    </header>
     <main>
-        <div class="events-container" onclick="toggleEvent()">
-           
-        </div>
-           
-     
+      <div class="events-container" onclick="toggleEvent()"></div>
 
-        <section id="add-event-form" style="display: block;">
-          <h3>Add a New Event</h3>
-          <input type="text" id="event-title" placeholder="Event Title" required>
-          <input type="text" id="event-description" placeholder="Description" required>
-          <input type="text" id="event-time" placeholder="Event Date and Time" required>
-          <input type="text" id="event-image" placeholder="Image URL" required>
-          <button onclick="addNewEvent()">Add Event</button>
-        </section>
-       
+      <section id="add-event-form" style="display: block">
+        <h3>Add a New Event</h3>
+        <input
+          type="text"
+          id="event-title"
+          placeholder="Event Title"
+          required
+        />
+        <input
+          type="text"
+          id="event-description"
+          placeholder="Description"
+          required
+        />
+        <input
+          type="text"
+          id="event-time"
+          placeholder="Event Date and Time"
+          required
+        />
+        <input type="text" id="event-image" placeholder="Image URL" required />
+        <button onclick="addNewEvent()">Add Event</button>
+      </section>
 
-        <header>
-            <h1>Weather</h1>
-        </header>   <!-- Weather Widget --> 
-<section class="weather-info">
-    <div class="weather-content-wrapper">
-        <!-- <div class="deco-img">
+      <header>
+        <h1>Weather</h1>
+      </header>
+      <!-- Weather Widget -->
+      <section class="weather-info">
+        <div class="weather-content-wrapper">
+          <!-- <div class="deco-img">
             <img src="/images/rain-cover.jpg" alt="images">
         </div> -->
 
-        <div class="weather-row">
+          <div class="weather-row">
             <!-- LEFT CONTENT -->
             <div class="left-content">
-                <div class="location-date-container">
-                    <div class="location">
-                        <span class="material-symbols-outlined"></span> 
-                        <h4 class="country-txt">Pretoria</h4>
-                    </div>
-                    <h5 class="current-date-txt regular-txt">Today</h5>
+              <div class="location-date-container">
+                <div class="location">
+                  <span class="material-symbols-outlined"></span>
+                  <h4 class="country-txt">Pretoria</h4>
                 </div>
-            
-                <div class="weather-summary-container">
-                    <img src="/images/weather/clear.svg" alt="" class="weather-summary-image">
-                    <div class="weather-summary-info">
-                        <h1 class="temp-txt">-- °C</h1>
-                        <h3 class="condition-txt regular-txt">Loading...</h3>
-                    </div>
+                <h5 class="current-date-txt regular-txt">Today</h5>
+              </div>
+
+              <div class="weather-summary-container">
+                <img
+                  src="/images/weather/clear.svg"
+                  alt=""
+                  class="weather-summary-image"
+                />
+                <div class="weather-summary-info">
+                  <h1 class="temp-txt">-- °C</h1>
+                  <h3 class="condition-txt regular-txt">Loading...</h3>
                 </div>
-            
-                <div class="weather-condition-container">
-                    <div class="condition-item">
-                        <span class="material-symbols-outlined">water_drop</span>
-                        <div class="condition-info">
-                            <h5 class="regular-txt">Humidity</h5>
-                            <h5 class="humidity-value-txt">--%</h5>
-                        </div>
-                    </div>
-                    <div class="condition-item">
-                        <span class="material-symbols-outlined">air</span>
-                        <div class="condition-info">
-                            <h5 class="regular-txt">Wind Speed</h5>
-                            <h5 class="wind-value-txt">-- M/s</h5>
-                        </div>
-                    </div>
-                    <div class="condition-item">
-                        <span class="material-symbols-outlined">brightness_empty</span>
-                        <div class="condition-info">
-                            <h5 class="regular-txt">UV Index</h5>
-                            <h5 class="UV-value-txt">3 to 5</h5>
-                        </div>
-                    </div>
+              </div>
+
+              <div class="weather-condition-container">
+                <div class="condition-item">
+                  <span class="material-symbols-outlined">water_drop</span>
+                  <div class="condition-info">
+                    <h5 class="regular-txt">Humidity</h5>
+                    <h5 class="humidity-value-txt">--%</h5>
+                  </div>
                 </div>
+                <div class="condition-item">
+                  <span class="material-symbols-outlined">air</span>
+                  <div class="condition-info">
+                    <h5 class="regular-txt">Wind Speed</h5>
+                    <h5 class="wind-value-txt">-- M/s</h5>
+                  </div>
+                </div>
+                <div class="condition-item">
+                  <span class="material-symbols-outlined"
+                    >brightness_empty</span
+                  >
+                  <div class="condition-info">
+                    <h5 class="regular-txt">UV Index</h5>
+                    <h5 class="UV-value-txt">3 to 5</h5>
+                  </div>
+                </div>
+              </div>
             </div>
-            
-            
+
             <div class="right-content">
-                <div class="forecast-item-container">
-                    <div class="forecast-item">
-                        <img class="forecast-item-img" src="/images/weather/sunny.svg" alt="Sunny">
-                        <div class="day">Mon</div>
-                        <div class="temp">25°C</div>
-                    </div>
-                    <div class="forecast-item">
-                        <img class="forecast-item-img" src="/images/weather/rainy.svg" alt="Rainy">
-                        <div class="day">Tue</div>
-                        <div class="temp">22°C</div>
-                    </div>
-                    <div class="forecast-item">
-                        <img class="forecast-item-img" src="/images/weather/partly-cloudy.svg" alt="Partly Cloudy">
-                        <div class="day">Wed</div>
-                        <div class="temp">24°C</div>
-                    </div>
-                    <div class="forecast-item">
-                        <img class="forecast-item-img" src="/images/weather/cloudy.svg" alt="Cloudy">
-                        <div class="day">Thu</div>
-                        <div class="temp">23°C</div>
-                    </div>
+              <div class="forecast-item-container">
+                <div class="forecast-item">
+                  <img
+                    class="forecast-item-img"
+                    src="/images/weather/sunny.svg"
+                    alt="Sunny"
+                  />
+                  <div class="day">Mon</div>
+                  <div class="temp">25°C</div>
                 </div>
+                <div class="forecast-item">
+                  <img
+                    class="forecast-item-img"
+                    src="/images/weather/rainy.svg"
+                    alt="Rainy"
+                  />
+                  <div class="day">Tue</div>
+                  <div class="temp">22°C</div>
+                </div>
+                <div class="forecast-item">
+                  <img
+                    class="forecast-item-img"
+                    src="/images/weather/partly-cloudy.svg"
+                    alt="Partly Cloudy"
+                  />
+                  <div class="day">Wed</div>
+                  <div class="temp">24°C</div>
+                </div>
+                <div class="forecast-item">
+                  <img
+                    class="forecast-item-img"
+                    src="/images/weather/cloudy.svg"
+                    alt="Cloudy"
+                  />
+                  <div class="day">Thu</div>
+                  <div class="temp">23°C</div>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-</section>
+      </section>
+    </main>
 
-      </main>
-
-<%- include('../partials/footer') %>
-<script src="appFrontEnd.js" ></script>
-</body>
+    <%- include('../partials/footer') %>
+    <script src="appFrontEnd.js"></script>
+  </body>
 </html>
