--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,10 +23,10 @@
         <a href="/events">Events</a></li>
       <li>
         <img src="../images/nav-bar-leaves.png" class="nav-icon" alt="Home Icon">
-        <a href="/contact">Contact</a></li>
+        <a href="/contact">Contact Us</a></li>
       <li>
-        <img src="../images/nav-bar-plant.png" class="nav-icon" alt="Home Icon">
-        <a href="/thankyou">Thank You</a></li>
+        <!-- <img src="../images/nav-bar-plant.png" class="nav-icon" alt="Home Icon">
+        <a href="/thankyou">Thank You</a></li> -->
         <li class="login-li">
             <a href="#" id="loginToggleBtn" style="background-color: #1d3215;">Sign In / Log In</a>
         </li>
