--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -303,7 +303,7 @@
           <img src="/images/HomePage/gall5.jpg" alt="" />
         </div>
         <div class="img3">
-          <img src="/images/HomePage/gall6.jpg" alt="" />
+          <img src="/images/HomePage/image2.jpg" alt="" />
         </div>
       </div>
     </section>
