--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -24,7 +24,7 @@
   <div class="subscribe">
     <h2>Don’t Miss Out — Subscribe for Weekly Event News</h2>
     <form class="sub-form">
-      <div class="form-group">
+      <div class="form-group mb-4">
         <label for="exampleInputEmail1">Email address</label>
         <input
           type="email"
@@ -33,9 +33,6 @@
           aria-describedby="emailHelp"
           placeholder="Enter email"
         />
-        <small id="emailHelp" class="form-text text-muted"
-          >We'll never share your email with anyone else.</small
-        >
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Details</label>
@@ -49,5 +46,12 @@
 
       <button type="submit" class="btn btn-primary mt-2">Subscribe</button>
     </form>
+    <div class="icon-div footer-logo">
+      <img src="../images/Icon.png" alt="Garden Logo" class="logo" />
+      <div class="icon-text">
+        <h1>GrowTogether</h1>
+        <h3>We thrive together</h3>
+      </div>
+    </div>
   </div>
 </footer>
