--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -6,18 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css" />
    <script src="app.js"></script>
-    <title>Home</title>
+    <title>Thank you!</title>
 </head>
 <body>
-    <%- include('../partials/header') %>
+   
+    <%# include('./partials/header') %>
 
-<main>
-    <h1>Thank You!</h1>
-    <p>Your message has been received.</p>
-    <p>Grow together, thrive together!</p>
-</main>
+    <main class="text-center" style="padding: 3rem">
+      <h1>🌻 Thank You!</h1>
+      <p>Your message has been received. We'll get back to you soon!</p>
+      <img src="/images/giphy3.gif" alt="">
+      <a href="/" class="btn btn-success mt-3">Back to Home</a>
+    </main>
+    
+    <%# include('./partials/footer') %>
 
-    <%- include('../partials/footer') %>
+   
     <script src="appFrontEnd.js"></script>
 </body>
 </html>
