--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <div class="space-barHeader">
-
 </div>
 
+<div class="main-header">
 <nav class="navbar">
     <div class="icon-div">
         <img src="../images/Icon.png" alt="Garden Logo" class="logo">
@@ -39,7 +39,7 @@
 
   <div id="loginPopup" class="popup-overlay">
     <div class="popup-content">
-        <!-- <form action="/login" method="POST"> -->
+      
             <h2>Login or Create Account</h2>
             <input type="text" id="username" placeholder="Username" style="font-size: large;"><br>
             <input type="password" id="password" placeholder="Password" style="font-size: large;"><br>
@@ -47,8 +47,8 @@
             <button class="popUpButton" onclick="signupUser()" style="font-size: large;">Sign Up</button>
             <button class="popUpButton" onclick="toggleLoginPopup()" style="font-size: large;">Close</button>
             <p id="loginMessage"></p>
-        <!-- </form> -->
+       
     </div>
   </div>
-
+</div>
   <!-- <script src="/appFrontEnd.js"></script> -->
