--- a/views/pages/events.ejs
+++ b/views/pages/events.ejs
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css" />
+    <!-- <link rel="stylesheet" href="/css/homepage.css" /> -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+    crossorigin="anonymous"
+  />
     <title>Events</title>
 </head>
 <body>
@@ -13,7 +20,7 @@
 <header>
     <h1 class="events-header-top">Our Events!</h1>
 </header>
-    <main>
+   
         <div class="events-container">
             <% events.forEach(event => { %>
                 <div class="event-card" onclick="toggleEvent(this)">
@@ -110,7 +117,7 @@
     </div>
 </section>
 
-      </main>
+      
 
 <%- include('../partials/footer') %>
 <script src="appFrontEnd.js" ></script>
