--- a/views/pages/events.ejs
+++ b/views/pages/events.ejs
@@ -1,125 +1,156 @@
-
-
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
     <!-- <link rel="stylesheet" href="/css/homepage.css" /> -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-    crossorigin="anonymous"
-  />
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
     <title>Events</title>
-</head>
-<body>
+  </head>
+  <body>
     <%- include('../partials/header') %>
-<header>
-    <h1 class="events-header-top">Our Events!</h1>
-</header>
-   
-        <div class="events-container">
-            <% events.forEach(event => { %>
-                <div class="event-card" onclick="toggleEvent(this)">
-                  <div class="event-image" style="background-image: url('<%= event.image %>');"></div>
-                  <div class="event-content">
-                    <h3 class="event-title" style=" font-size: 2rem;" ><%= event.title %></h3>
-                    <p class="event-creator">By <%= event.addedBy %></p>
-                    <p class="event-time"><%= event.time || 'No time set' %></p>
-                    <p class="event-description"><%= event.description %></p>
-                  </div>
-                </div>
-              <% }) %>    
+    <div class="gardenHeader">
+      <img
+        src="../images/GardeningHeaderSnip.jpg"
+        alt="Garden picture"
+        class="gardenPicture"
+      />
+    </div>
+    <header>
+      <h1 class="events-header-top">Our Events!</h1>
+    </header>
+
+    <div class="events-container">
+      <% events.forEach(event => { %>
+      <div class="event-card" onclick="toggleEvent(this)">
+        <div
+          class="event-image"
+          style="background-image: url('<%= event.image %>')"
+        ></div>
+        <div class="event-content">
+          <h3 class="event-title" style="font-size: 2rem">
+            <%= event.title %>
+          </h3>
+          <p class="event-creator">By <%= event.addedBy %></p>
+          <p class="event-time"><%= event.time || 'No time set' %></p>
+          <p class="event-description"><%= event.description %></p>
         </div>
-        
-        <header>
-            <h1 class="events-header-weather">Weather</h1>
-        </header>   <!-- Weather Widget --> 
-<section class="weather-info">
-    <div class="weather-content-wrapper">
+      </div>
+      <% }) %>
+    </div>
+
+    <header>
+      <h1 class="events-header-weather">Weather</h1>
+    </header>
+    <!-- Weather Widget -->
+    <section class="weather-info">
+      <div class="weather-content-wrapper">
         <!-- <div class="deco-img">
             <img src="/images/rain-cover.jpg" alt="images">
         </div> -->
 
         <div class="weather-row">
-            <!-- LEFT CONTENT -->
-            <div class="left-content">
-                <div class="location-date-container">
-                    <div class="location">
-                        <span class="material-symbols-outlined"></span> 
-                        <h4 class="country-txt">Pretoria</h4>
-                    </div>
-                    <h5 class="current-date-txt regular-txt">Today</h5>
-                </div>
-            
-                <div class="weather-summary-container">
-                    <img src="/images/weather/clear.svg" alt="" class="weather-summary-image">
-                    <div class="weather-summary-info">
-                        <h1 class="temp-txt">-- °C</h1>
-                        <h3 class="condition-txt regular-txt">Loading...</h3>
-                    </div>
-                </div>
-            
-                <div class="weather-condition-container">
-                    <div class="condition-item">
-                        <span class="material-symbols-outlined">water_drop</span>
-                        <div class="condition-info">
-                            <h5 class="regular-txt">Humidity</h5>
-                            <h5 class="humidity-value-txt">--%</h5>
-                        </div>
-                    </div>
-                    <div class="condition-item">
-                        <span class="material-symbols-outlined">air</span>
-                        <div class="condition-info">
-                            <h5 class="regular-txt">Wind Speed</h5>
-                            <h5 class="wind-value-txt">-- M/s</h5>
-                        </div>
-                    </div>
-                    <div class="condition-item">
-                        <span class="material-symbols-outlined">brightness_empty</span>
-                        <div class="condition-info">
-                            <h5 class="regular-txt">UV Index</h5>
-                            <h5 class="UV-value-txt">3 to 5</h5>
-                        </div>
-                    </div>
-                </div>
+          <!-- LEFT CONTENT -->
+          <div class="left-content">
+            <div class="location-date-container">
+              <div class="location">
+                <span class="material-symbols-outlined"></span>
+                <h4 class="country-txt">Pretoria</h4>
+              </div>
+              <h5 class="current-date-txt regular-txt">Today</h5>
             </div>
-            
-            
-            <div class="right-content">
-                <div class="forecast-item-container">
-                    <div class="forecast-item">
-                        <img class="forecast-item-img" src="/images/weather/atmosphere.svg" alt="Sunny">
-                        <div class="day">Mon</div>
-                        <div class="temp">25°C</div>
-                    </div>
-                    <div class="forecast-item">
-                        <img class="forecast-item-img" src="/images/weather/rainy.svg" alt="Rainy">
-                        <div class="day">Tue</div>
-                        <div class="temp">22°C</div>
-                    </div>
-                    <div class="forecast-item">
-                        <img class="forecast-item-img" src="/images/weather/partly-cloudy.svg" alt="Partly Cloudy">
-                        <div class="day">Wed</div>
-                        <div class="temp">24°C</div>
-                    </div>
-                    <div class="forecast-item">
-                        <img class="forecast-item-img" src="/images/weather/cloudy.svg" alt="Cloudy">
-                        <div class="day">Thu</div>
-                        <div class="temp">23°C</div>
-                    </div>
-                </div>
+
+            <div class="weather-summary-container">
+              <img
+                src="/images/weather/clear.svg"
+                alt=""
+                class="weather-summary-image"
+              />
+              <div class="weather-summary-info">
+                <h1 class="temp-txt">-- °C</h1>
+                <h3 class="condition-txt regular-txt">Loading...</h3>
+              </div>
             </div>
+
+            <div class="weather-condition-container">
+              <div class="condition-item">
+                <span class="material-symbols-outlined">water_drop</span>
+                <div class="condition-info">
+                  <h5 class="regular-txt">Humidity</h5>
+                  <h5 class="humidity-value-txt">--%</h5>
+                </div>
+              </div>
+              <div class="condition-item">
+                <span class="material-symbols-outlined">air</span>
+                <div class="condition-info">
+                  <h5 class="regular-txt">Wind Speed</h5>
+                  <h5 class="wind-value-txt">-- M/s</h5>
+                </div>
+              </div>
+              <div class="condition-item">
+                <span class="material-symbols-outlined">brightness_empty</span>
+                <div class="condition-info">
+                  <h5 class="regular-txt">UV Index</h5>
+                  <h5 class="UV-value-txt">3 to 5</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="right-content">
+            <div class="forecast-item-container">
+              <div class="forecast-item">
+                <img
+                  class="forecast-item-img"
+                  src="/images/weather/atmosphere.svg"
+                  alt="Sunny"
+                />
+                <div class="day">Mon</div>
+                <div class="temp">25°C</div>
+              </div>
+              <div class="forecast-item">
+                <img
+                  class="forecast-item-img"
+                  src="/images/weather/rainy.svg"
+                  alt="Rainy"
+                />
+                <div class="day">Tue</div>
+                <div class="temp">22°C</div>
+              </div>
+              <div class="forecast-item">
+                <img
+                  class="forecast-item-img"
+                  src="/images/weather/partly-cloudy.svg"
+                  alt="Partly Cloudy"
+                />
+                <div class="day">Wed</div>
+                <div class="temp">24°C</div>
+              </div>
+              <div class="forecast-item">
+                <img
+                  class="forecast-item-img"
+                  src="/images/weather/cloudy.svg"
+                  alt="Cloudy"
+                />
+                <div class="day">Thu</div>
+                <div class="temp">23°C</div>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
 
-      
-
-<%- include('../partials/footer') %>
-<script src="appFrontEnd.js" ></script>
-</body>
+    <%- include('../partials/footer') %>
+    <script src="appFrontEnd.js"></script>
+  </body>
 </html>
